@@ -1,6 +1,3 @@
-checking no-pages-types.pdf
-PDF Version: 1.3
-File is not encrypted
-File is not linearized
 WARNING: no-pages-types.pdf (page tree node, offset 307): /Type key should be /Page but is not; overriding
 WARNING: no-pages-types.pdf (page tree node, offset 307): /Type key should be /Pages but is not; overriding
+qpdf: operation succeeded with warnings; resulting file may have some problems
